fix: replace wrong colors with correct ones

--- a/src/components/v5/common/Fields/Select/Select.module.css
+++ b/src/components/v5/common/Fields/Select/Select.module.css
@@ -27,7 +27,7 @@
 }
 
 .wrapper :global(.select__menu) {
-  @apply bg-red-500;
+  @apply bg-negative-400;
 }
 
 .menu {
